--- a/examples/demo/platformio.ini
+++ b/examples/demo/platformio.ini
@@ -1,9 +1,9 @@
-[env:esp32-waveshare2in13b]
+[env:esp32-waveshare1in54bv2]
 platform = espressif32
 board = node32s
 framework = arduino
 lib_deps = 
-	codewitch-honey-crisis/htcw_waveshare1in54bv2@^0.9.7
+	codewitch-honey-crisis/htcw_waveshare1in54bv2@^0.9.8
 lib_ldf_mode = deep
 build_unflags=-std=gnu++11
 build_flags=-std=gnu++14
